2003-10-30  Jim Blandy  <jimb@redhat.com>

	* cpu-rs6000.c (rs6000_compatible): Check the correct arch_info
	object's mach field: all PowerPC machines are supersets of the
	original rs6000, but not later rs6000 machines.

2003-10-30  Alan Modra  <amodra@bigpond.net.au>

	* dwarf2.c (struct attribute): Delete "unsnd", "snd" and "addr".
	Add "val" and "sval" fields.
	(DW_STRING, DW_UNSND, DW_BLOCK, DW_SND, DW_ADDR): Delete.
	(read_attribute_value): Expand and adjust DW_* occurrences.
	(scan_unit_for_functions, parse_comp_unit): Likewise.

2003-10-30  Phil Edwards  <phil@codesourcery.com>

	* config.bfd (arm-*-vxworks):  Remove separate stanza; merge with
	other common ELF triples.
	(i[3-7]86-*-vxworks):  Change to ELF format.
	(mips*-*-windiss):  New triple, add to common MIPS/ELF stanza.
	(sh-*-vxworks):  New stanza.

2003-10-30  Lars Knoll  <lars@trolltech.com>
	    Michael Matz  <matz@suse.de>
	    Jakub Jelinek  <jakub@redhat.com>
	    Alan Modra  <amodra@bigpond.net.au>

	* merge.c (struct sec_merge_sec_info): Update comment.
	(struct sec_merge_hash_entry): Remove entsize.
	(sec_merge_hash_lookup): Only adjust alignment when creating.
	(sec_merge_emit): Remove register keyword.
	(cmplengthentry, last4_eq, last_eq): Delete.
	(strrevcmp, strrevcmp_align, is_suffix): New.
	(merge_strings): Use them to implement fast suffix merging.
	* elf-strtab.c (struct elf_strtab_hash_entry): Update comments.
	Make "len" signed.
	(_bfd_elf_strtab_add): Lose on >2G strings.
	(_bfd_elf_strtab_emit): Don't emit strings with len < 0.
	(cmplengthentry, last4_eq): Delete.
	(strrevcmp, is_suffix): New.
	(_bfd_elf_strtab_finalize): Rework to implement fast suffix merging.

2003-10-29  Daniel Jacobowitz  <drow@mvista.com>

        * elf32-arm.h (elf32_arm_final_link_relocate): Move check for
        SEC_ALLOC.

2003-10-29  Philip Blundell  <philb@gnu.org>

	* elf32-arm.h (elf32_arm_plt0_entry, elf32_arm_plt_entry): New
	code sequence.
	(PLT_HEADER_SIZE): New.